<resources>
    <string name="app_name" translatable="false">RelaySMS</string>
    <string name="email_compose_to">
        To
    </string>
    <string name="email_compose_cc">
        cc
    </string>
    <string name="email_compose_bcc">
       bcc
    </string>
    <string name="email_compose_subject">
       Subject
    </string>
    <string name="email_compose_body">Compose email</string>
    <string name="selected_gateway_client_text">Selected Gateway Client</string>
    <string name="homepage_recent">Recent"</string>
    <string name="homepage_no_recent_messages">No Recent Messages</string>
    <string name="message_compose_phonenumber">Contact\'s phone number</string>
    <string name="message_compose_body">Message</string>
    <string name="message_compose_empty_recipient">Recipient cannot be empty!</string>
    <string name="message_compose_empty_body">Body should not be empty!</string>
    <string name="homepage_read_our_privacy_policy">Read our privacy policy</string>
    <string name="settings_settings">Settings</string>
    <string name="tweet_compose_tweet">Post</string>
    <string name="tweet_compose_prompt">What\'s happening?</string>
    <string name="main_navigation_settings">Settings</string>
    <string name="message_compose_header">Message…</string>
    <string name="settings_accessibility_category">Accessibility</string>
    <string name="settings_language">Language</string>
    <string name="settings_security_category">Security and Privacy</string>
    <string name="settings_security">Security</string>
    <string name="settings_security_category_summary">Enable app locks and pin codes</string>
    <string name="settings_gateway_clients_text">Gateway Clients</string>
    <string name="settings_lock_screen_preference_category">Phone Lockscreen options</string>
    <string name="settings_security_and_privacy_enable_lockscreen_open">Enable lockscreen</string>
    <string name="settings_security_and_privacy_enable_lockscreen_open_summary">Require lockscreen pin/fingerprint when starting the app</string>
    <string name="settings_security_and_privacy_account">"Account</string>
    <string name="settings_security_and_privacy_account_logout">Logout</string>
    <string name="settings_security_and_privacy_account_logout_summary">Logout of your account. You can always log back in, however you current messages would be deleted. </string>
    <string name="settings_security_and_privacy_account_delete">Delete</string>
    <string name="settings_security_and_privacy_account_delete_summary">"Deleting your account means deleting all your saved accounts online. You can always recreate your account once needed.     "</string>
    <string name="language_choose_text">"Choose your preferred language     "</string>
    <string name="language_english">English</string>
    <string name="language_french">"French</string>
    <string name="language_farsi">Farsi</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_turkish" >
        Turkish
    </string>
    <string name="language_english_value" translatable="false">
        en
    </string>
    <string name="language_french_value" translatable="false">
        fr
    </string>
    <string name="language_farsi_value" translatable="false">
        fa
    </string>
    <string name="language_spanish_value" translatable="false">
        es
    </string>
    <string name="language_turkish_value" translatable="false">
        tr
    </string>
    <string name="default_gateway_MSISDN_0" translatable="false">+237679466332</string>
    <string name="default_gateway_MSISDN_2" translatable="false">+237690826242</string>
    <string name="default_gateway_MSISDN_3" translatable="false">+2348131498393</string>
    <string name="gateway_client_settings_add_custom_empty_error">Please provide a phone number</string>
    <string name="new_gateway_client_alias">Alias (optional)</string>
    <string name="gateway_client_alias_description">Name to help remember the Gateway client</string>
    <string name="gateway_client_save_btn_text">Save</string>
    <string name="choose_sms_app">Select an SMS messaging app</string>
    <string name="email_compose_title">Compose email</string>
    <string name="security_settings_failed_to_switch_security">Failed to switch security on…</string>
    <string name="settings_security_biometric_user_cannot_add_this_functionality_at_this_time">User cannot add this functionality at this time.</string>
    <string name="gateway_client_add_label">Add</string>
    <string name="gateway_client_refresh_label">Refresh</string>
    <string name="lock_screen_relay_sms_is_locked">RelaySMS App is locked</string>
    <string name="lock_screen_unlock_with_your_phone_s_locking_system">Unlock with your phone\'s locking system</string>
    <string name="gateway_client_add_custom_example_text">e.g +237123456789 or select contact</string>
    <string name="gateway_client_add_gateway_client_text">Add Gateway Client</string>
    <string name="otp_verification_code_template" translatable="false">Your SMSWithoutBorders-Auth verification code is: </string>
    <string name="signup_phonenumber_empty_error">Please provide a phone number</string>
    <string name="signup_please_provide_a_strong_password">Please provide a strong password</string>
    <string name="signup_please_re_enter_your_password">Please re-enter your password</string>
    <string name="signup_your_passwords_do_not_match">Your passwords do not match!</string>
    <string name="owernship_otp_please_enter_a_valid_code">Please enter a valid code</string>
    <string name="ownership_resend_code_by_sms">Time left until code sent via SMS expires: %1$d</string>
    <string name="resend_code">Resend code</string>
    <string name="sms_code_expired">The SMS code has expired. Please try again.</string>
    <string name="copy_code_telegram">In case of Telegram, please enter the code without copying it from Telegram. Copying the code is a security risk and Telegram may take some actions to protect your account.</string>
    <string name="login_password_empty_please_provide_a_password">Please provide a password</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_finish">Finish</string>
    <string name="onboarding_previous">Previous</string>
    <string name="onboarding_let_s_get_you_started">Let\'s get you started</string>
    <string name="onboarding_try_example">Try Example!</string>
    <string name="onboarding_log_into_vault">Login</string>
    <string name="login_password">Password</string>
    <string name="logout_you_have_no_accounts_logged_into_vaults_at_this_time">You have no accounts logged into Vaults at this time</string>
    <string name="login_telephone_number_hint">Telephone number</string>
    <string name="signup_i_have_read_the_privacy_policy_start">I have read the </string>
    <string name="signup_i_have_read_the_privacy_policy_end">Privacy policy</string>
    <string name="signup_you_have_to_read_the_privacy_policy_to_proceed">You have to read the privacy policy to proceed!</string>
    <string name="platforms_these_are_platforms_stored_in_your_vault_and_can_be_used_when_you_are_offline">These are platforms stored in your Vault and can be used when you are offline.</string>
    <string name="platforms_saved_platforms">Saved Platforms</string>
    <string name="platforms_unsaved_platforms">Add Platforms to use offline</string>
    <string name="platform_your_vault_is_empty">Your Vault is empty</string>
    <string name="settings_privacy_vault_preference">Vault</string>
    <string name="settings_privacy_preferences_choose_which_platforms_you_want_to_remove_from_the_vault">Choose which platforms you want to remove from the Vault</string>
    <string name="login_login">Login</string>
    <string name="store_select_platforms_you_will_like_to_utilize_without_an_internet_connection_this_would_still_require_you_to_have_sms_messages_activated">Select platforms you will like to utilize without an internet connection. This would still require you to have SMS messages activated</string>
    <string name="platforms_no_platform_to_store">No platform to store</string>
    <string name="homepage_save_platforms">Save platforms</string>
    <string name="security_settings_you_have_no_accounts_to_delete_in_vault_at_this_time">You have no accounts to delete in Vault at this time</string>
    <string name="helper_yesterday">yesterday</string>
    <string name="text_compose_you_need_some_content_for_posting">You need some content for posting</string>
    <string name="smswithoutborders_official_privacy_policy">https://smswithoutborders.com/privacy-policy</string>
    <string name="smswithoutboarders_official_gateway_client_seeding_url" translatable="false">https://smswithoutborders.com:15000/v3/clients</string>
    <string name="log_into_your_vault_account_or_create_one_if_you_do_not_have_yet">Log into your Vault account or create one if you do not have yet</string>
    <string name="login_signup_create_new">Create new</string>
    <string name="compose_edit">Edit</string>
    <string name="compose_delete">Delete</string>
    <string name="welcome_back_nsign_in_to_continue_with_existing_account">Welcome back Sign in to continue with existing account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_vault_account">Create account</string>
    <string name="signup">Signup</string>
    <string name="if_you_do_not_have_an_account_nplease_create_one_to_save_your_platforms">If you do not have an account Please create one to save your platforms</string>
    <string name="already_have_an_account">Already have an account? Log in</string>
    <string name="already_got_sms_code">Already got SMS code</string>
    <string name="forgot_password_recovery">Forgot password?</string>
    <string name="if_you_forgot_your_password_nenter_your_phone_number_and_new_passwords">If you forgot your password Enter your phone number and new passwords</string>
    <string name="recovery_continue">Continue</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="new_password">New password</string>
    <string name="welcome_to_bridges">Welcome to Bridges</string>
    <string name="authenticate_with_bridges">Authenticate with Bridges</string>
    <string name="submit_code">Submit Code</string>
    <string name="input_sms_code">Input SMS code</string>
    <string name="send_now">Send now</string>
    <string name="send_now_info">Send only the authentication code via SMS</string>
    <string name="compose_and_send">Compose and send</string>
    <string name="compose_and_send_info">Compose your first message alongside sending your auth code to save SMS cost</string>
    <string name="bridges_auth_info">An alias uses your phone number to communicate on your behalf. An example alias would be 12345@relaysms.me.</string>
    <string name="authenticate_your_alias">Alias authentication</string>
    <string name="the_code_would_be_automatically_detected_sometimes_n_nin_case_it_is_not_automatically_received_please_copy_the_entire_sms_message_and_paste_in_the_box_below">The code would be automatically detected sometimes.\n\nIn case it is not automatically received, please copy the entire SMS message and paste in the box below</string>
    <string name="paste_entire_sms_message_in_here">Paste Entire SMS message in here...</string>
    <string name="authenticate_code">Verify and save code</string>
    <string name="the_code_would_be_attached_to_the_first_message_you_send_from_the_app">The code would be attached to the first message you send from the app</string>
    <string name="publishing_with_aliases">Publishing with Aliases</string>
    <string name="only_emailing_is_supported_with_aliasing_at_this_time">Only emailing is supported with Aliasing at this time</string>
    <string name="compose_new_message">Compose new message</string>
</resources>