<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bridges_auth_code_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <include
            layout="@layout/fragment_telegram_info_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/input_sms_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sms_code_input"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:inputType="number|textMultiLine"
                android:gravity="top" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/send_now_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/send_now" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_now_info"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/compose_and_send_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compose_and_send" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/compose_and_send_info"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>

