<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:theme="@style/Theme.main"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    style="@style/Widget.Material3.BottomSheet.Modal">

    <LinearLayout
        android:id="@+id/bridges_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/publishing_with_aliases"
            android:textSize="25sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/bridges_auth_info"
            android:textAlignment="center"
            android:textColor="@color/md_theme_outline" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_description2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/only_emailing_is_supported_with_aliasing_at_this_time"
            android:textAlignment="center"
            android:textColor="@color/md_theme_outline" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bridge_compose_new_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/compose_new_message"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
